# learn-openGL-course

./: .gitignore  CMakeLists.txt  README.md  Shader.cpp  Shader.h  camera.h  frag_shader.fs  glad.c  main.cpp  vertex_shader.vs
libraries/include/glad/: glad.h
